[package]
name = "junction"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ju"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
derivative = { version = "2.2.0" }